results/SpecGenBench/0-shot/log-UglyNumLoop-2023_11_29_01_48_18.txt
class UglyNum {
    //@ requires n >= 0;
    //@ ensures \result == true || \result == false;
    public static boolean isUgly(int n) {
        //@ assume n >= 0;
        if (n <= 0) {
            //@ assert \result == false;
            return false;
        }
        //@ loop_invariant n >= 0;
        //@ loop_variant n;
        while (n % 2 == 0) {
            //@ assert n % 2 == 0;
            n /= 2;
            //@ assert n >= 0;
        }
        //@ loop_invariant n >= 0;
        //@ loop_variant n;
        while (n % 3 == 0) {
            //@ assert n % 3 == 0;
            n /= 3;
            //@ assert n >= 0;
        }
        //@ loop_invariant n >= 0;
        //@ loop_variant n;
        while (n % 5 == 0) {
            //@ assert n % 5 == 0;
            n /= 5;
            //@ assert n >= 0;
        }
        //@ assert n == 1 || n != 1;
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/UglyNumLoop.java:11: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
        //@ loop_variant n;
            ^
/home/max/Documents/JMLGPT/tmp/UglyNumLoop.java:18: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
        //@ loop_variant n;
            ^
/home/max/Documents/JMLGPT/tmp/UglyNumLoop.java:25: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
        //@ loop_variant n;
            ^
3 errors

